--- a/css/navbar.css
+++ b/css/navbar.css
@@ -33,13 +33,13 @@ header {
 .menu {
    display: flex;
    align-items: center;
-   gap: 40px;
+   gap: 32px;
    flex-wrap: wrap;
    list-style: none;
 }
 
 .menu a {
-   font-family: "Cabinet Grotesk", sans-serif;
+   font-family: "Figtree", sans-serif;
    display: inline-block;
    color: var(--headers);
    transition: 0.3s;
